--- a/InterstellarWhiteAnimated/ps5controllercsss.css
+++ b/InterstellarWhiteAnimated/ps5controllercsss.css
@@ -1,6 +1,6 @@
 /*BEGIN PS4 Controller Styling*/
 .controller.ds4 {
-    background: url(base.png);
+    background: url(InterstellarAnimated.gif);
     height: 556px;
     width: 703px;
     /*    margin-left: -403px;
